--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
