--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "^9.19.0",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
