--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34",
+    "@types/webpack-env": "^1.18.8",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
